--- a/directions.html
+++ b/directions.html
@@ -9,6 +9,7 @@
     >
     <title>오시는 길 :: 한국재즈페스티벌 2023</title>
     <link rel="stylesheet" href="css/style.css" >
+    <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body>
     <?php include 'header.php'; ?>
@@ -52,11 +53,7 @@
             </div>
             <ul class="transportContent">
               <li><p>주소 : 서울특별시 송파구 올림픽로 424 올림픽공원</p></li>
-              <li>
-                <p>
-                  주차요금은 페스티벌 기간 동안 올림픽공원의 규정에 따릅니다.
-                </p>
-              </li>
+              <li><p>주차요금은 페스티벌 기간 동안 올림픽공원의 규정에 따릅니다.</p></li>
               <li><p>올림픽공원 현 주차 요금 : 10분 당 600원</p></li>
             </ul>
           </li>
