--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>한국재즈페스티벌 2023</title>
     <!-- Font Awesome -->
-    <script
-      src="https://kit.fontawesome.com/fa2fe9a1db.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/fa2fe9a1db.js" crossorigin="anonymous"></script>
+    <!-- 기본 css -->
     <link rel="stylesheet" href="css/style.css" >
+    <!-- ico 설정 -->
+     <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body>
     <!-- 모달 -->
@@ -21,8 +18,7 @@
       <div class="modal-content">
         <span class="close">&times;</span>
         <p>
-          이 사이트는 상업적 목적의 공식 페이지가 아니며,개인 포트폴리오용으로
-          제작되었습니다.<br ><br >
+          이 사이트는 상업적 목적의 공식 페이지가 아니며,개인 포트폴리오용으로 제작되었습니다.<br ><br >
           <span>화면을 누르면 사라지며, 하루동안 나타나지 않습니다.</span>
         </p>
       </div>
@@ -108,7 +104,9 @@
         <h2>information</h2>
         <div class="info-menu">
           <div class="timetable">
-            <div class="info_inner"><i class="fa-solid fa-table"></i></div>
+            <div class="info_inner">
+              <i class="fa-solid fa-table"></i>
+            </div>
             <p>타임테이블</p>
           </div>
           <div class="location">
@@ -120,11 +118,15 @@
             </a>
           </div>
           <div class="onsite">
-            <div class="info_inner"><i class="fa-solid fa-ticket"></i></div>
+            <div class="info_inner">
+              <i class="fa-solid fa-ticket"></i>
+            </div>
             <p>티켓현장예매</p>
           </div>
           <div class="faq">
-            <div class="info_inner"><i class="fa-solid fa-headset"></i></div>
+            <div class="info_inner">
+              <i class="fa-solid fa-headset"></i>
+            </div>
             <p>자주 묻는 질문</p>
           </div>
         </div>
@@ -132,6 +134,7 @@
 
       <section class="photo">
         <h2>photo</h2>
+        <p>사진을 양쪽으로 슬라이드 하세요</p>
         <div class="photoSlide">
           <div class="photoSlide-Container">
             <div class="photoSlide-slide5_suedo"></div>
