--- a/artist.html
+++ b/artist.html
@@ -8,7 +8,8 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     >
     <title>아티스트 :: 한국재즈페스티벌 2023</title>
-    <link rel="stylesheet" href="css/style.css" >
+    <link rel="stylesheet" href="css/style.css" >    
+    <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body>
     <?php include 'header.php'; ?>
