--- a/html(backup)/header.html
+++ b/html(backup)/header.html
@@ -10,7 +10,7 @@
             <li>
               <a href="program.html">PROGRAM</a>
               <ul class="subMenu">
-                <li><a href="">ARTIST</a></li>
+                <li><a href="artist.html">ARTIST</a></li>
                 <li><a href="">TIMETABLE</a></li>
               </ul>
             </li>
